[package]

name = "selectors"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
documentation = "http://doc.servo.org/selectors/"

description = "CSS Selectors matching for Rust"
repository = "https://github.com/servo/rust-selectors"
readme = "README.md"
keywords = ["css", "selectors"]
license = "MPL-2.0"

[features]
unstable = ["string_cache_plugin", "string_cache/unstable"]
heap_size = ["string_cache/heap_size", "heapsize", "heapsize_plugin"]

[dependencies]
bitflags = "0.3"
matches = "0.1"
cssparser = "0.3"
smallvec = "0.1"
fnv = "1.0"
string_cache = "0.1.13"
string_cache_plugin = { version = "0.1.7", optional = true }
quickersort = "1.0.0"

[dependencies.heapsize]
version = "0.1.1"
features = [ "unstable" ]
optional = true

[dependencies.heapsize_plugin]
version = "0.1.0"
optional = true

[dev-dependencies]
rand = "0.3"
